--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(3,100px);
     grid-template-rows: repeat(3,100px);
     margin-left: 34%;
-    margin-top: 20%;
+    margin-top: 15%;
 }
 .cuadro{
     display: flex;
@@ -37,4 +37,13 @@
 }
 div{
     font-size: 50px;
+}
+
+#mensaje{
+    margin-top: 40px;
+    font-size: 50px;
+    margin-left: 25px;
+    width: 300px;
+    text-transform: uppercase;
+     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
