--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,57 @@
 .conteinerDeGato{
     display: grid;
-    grid-template-columns: repeat(3,100px);
-    grid-template-rows: repeat(3,100px);
+    grid-template-columns: repeat(3,110px);
+    grid-template-rows: repeat(3,110px);
     margin-left: 34%;
-    margin-top: 15%;
+    margin-top: 6%;
+
+    
 }
+
+
+#cuadro0,#cuadro1,#cuadro2,#cuadro3,#cuadro4,#cuadro5,#cuadro6,#cuadro7,#cuadro8{
+    color: white;
+    text-shadow: 1px 1px 7px white,
+    0 0 9em white,
+    0 0 0.2em white;
+    
+}
+
 .cuadro{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
     
 }
 .cuadro5{
-    border-left: solid 2px black ;
-    border-right: solid 2px black;
-    border-bottom: 2px solid black;
+    border-left: solid 2px rgb(0, 221, 255);
+    border-right: solid 2px rgb(0, 221, 255);
+    border-bottom: 2px solid rgb(0, 221, 255);
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+  
    
 }
 .cuadro4{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid rgb(0, 221, 255);
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    color: white;
+   
 }
-.cuadro8{
-    border-left: solid 2px black ;
-    border-right: solid 2px black;
+.cuadro8 {
+    border-left: solid 2px rgb(0, 221, 255);
+    border-right: solid 2px rgb(0, 221, 255);
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+   
+    
    
 }
 div{
@@ -41,9 +60,72 @@ div{
 
 #mensaje{
     margin-top: 40px;
-    font-size: 50px;
-    margin-left: 25px;
+    font-size: 40px;
+    margin-left: 60px;
     width: 300px;
     text-transform: uppercase;
      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     color: white;
+     text-shadow: 1px 1px 10px white,
+    0 0 10em white,
+    0 0 0.2em white;
+}
+
+#btn{
+    height: 50px;
+    width: 110px;
+    margin-top: 130px;
+    background-color: transparent; 
+    border: transparent;
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 15px;
+    border: 3px solid  rgb(0, 221, 255) ;
+    border-radius: 20px 20px ;
+    text-transform: uppercase;
+}
+
+
+#btn:active{
+    background-color: rgb(0, 221, 255);
+    transform: scale(0.9);
+    box-shadow: 0px 0px 40px 10px rgb(0, 221, 255) ;
+
+}
+
+.video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Asegura que el video cubra toda la pantalla */
+    z-index: -1; /*Coloca el video detrás del contenido*/
+}
+
+.btnInicio{
+    height: 80px;
+    width: 200px;
+    font-size: 30px;
+    margin-top: 50px;
+    background-color: transparent; 
+    border: transparent;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  
+    border-radius: 20px 20px ;
+    text-transform: uppercase;
+
+}
+.btnInicio:hover{
+    background-color: black;
+    transform: scale(0.9);
+    box-shadow: 0px 0px 40px 10px rgb(0, 225, 255) ;
+}
+
+
+.lu{
+    display: flex;
+    justify-content: center;
+    margin-top: 20%;
 }
